Astro::IRAF::CL (0.1) stable;

  * First release to CPAN
  
 -- Stephen Quinney <irafperl@jadevine.org.uk>  Tue, 23 Jul 2002 14:34:28 +0100
