@@ -1,0 +1,8 @@
+#!/usr/bin/env perl -w
+use strict;
+use Test;
+BEGIN { plan tests => 1 }
+
+use Astro::IRAF::CL; ok(1);
+exit;
+__END__
